# wsinfer

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  convert_csv_to_geojson.py  models.py  pyproject.toml  requirements.txt  run.py  run_inference.py  setup.cfg  setup.py
.github/workflows/: ci.yaml  ci.yml  publish-to-pypi.yml  ruff.yml
dockerfiles/: tils-vgg16.dockerfile  tils.dockerfile  tumor-brca.dockerfile  tumor-luad.dockerfile  tumor-paad.dockerfile  tumor-prad.dockerfile
docs/: cli.rst  conf.py  index.rst  installing.rst  qupath_ext.rst  requirements.txt  user_guide.rst
docs/_static/: switcher.json
scripts/: README.md  build_docker_images.sh  convert_tf_to_pytorch_til_inceptionv4.py  convert_tf_to_pytorch_til_vgg16.py  convert_to_torchscript.py
tests/: test_all.py
tests/reference/breast-tumor-inception_v4.tcga-brca/: purple.csv
tests/reference/breast-tumor-resnet34.tcga-brca/: purple.csv
tests/reference/breast-tumor-vgg16mod.tcga-brca/: purple.csv
tests/reference/lung-tumor-resnet34.tcga-luad/: purple.csv
tests/reference/pancancer-lymphocytes-inceptionv4.tcga/: purple.csv
tests/reference/pancreas-tumor-preactresnet34.tcga-paad/: purple.csv
tests/reference/prostate-tumor-resnet34.tcga-prad/: purple.csv
wsi_inference/: _version.py  convert_csv_to_geojson.py  convert_csv_to_sbubmi.py  main.py  run.py  run_inference.py
wsi_inference/modellib/: inceptionv4.py  models.py  resnet_preact.py  run_inference.py  transforms.py
wsi_inference/patchlib/: README.md  create_patches_fp.py
wsi_inference/patchlib/utils/: core_utils.py  eval_utils.py  file_utils.py  utils.py
wsi_inference/patchlib/wsi_core/: WholeSlideImage.py  batch_process_utils.py
wsinfer/: __init__.py  __main__.py  _version.py  convert_csv_to_sbubmi.py  errors.py  qupath.py  slide_utils.py  write_geojson.py  wsi.py
wsinfer/_modellib/: data.py  inceptionv4_no_batchnorm.py  models.py  resnet_preact.py  run_inference.py  transforms.py  vgg16mod.py
wsinfer/_modellib/custom_models/: inceptionv4_no_batchnorm.py
wsinfer/_patchlib/: create_dense_patch_grid.py  create_patches_fp.py
wsinfer/_patchlib/utils/: file_utils.py  utils.py
wsinfer/_patchlib/wsi_core/: WholeSlideImage.py  util_classes.py  wsi_utils.py
wsinfer/cli/: cli.py  convert_csv_to_geojson.py  convert_csv_to_sbubmi.py  infer.py  list_models_and_weights.py  patch.py
wsinfer/modeldefs/: inceptionv4_tcga-brca-v1.yaml  inceptionv4nobn_tcga-tils-v1.yaml  preactresnet34_tcga-paad-v1.yaml  resnet34_tcga-brca-v1.yaml  resnet34_tcga-luad-v1.yaml  resnet34_tcga-prad-v1.yaml  vgg16_tcga-tils-v1.yaml  vgg16mod_tcga-BRCA-v1.yaml
wsinfer/modellib/: data.py  inceptionv4.py  inceptionv4_no_batchnorm.py  models.py  run_inference.py  transforms.py
wsinfer/modellib/custom_models/: inceptionv4_no_batchnorm.py  resnet_preact.py  vgg16mod.py
wsinfer/patchlib/: __init__.py  create_dense_patch_grid.py  create_patches_fp.py  patch.py  segment.py
wsinfer/patchlib/utils/: file_utils.py  utils.py
wsinfer/patchlib/wsi_core/: WholeSlideImage.py  batch_process_utils.py  util_classes.py  wsi_utils.py
wsinfer/schemas/: model-config.schema.json
