[metadata]
name = wsi_inference
url = https://github.com/kaczmarj/patch-classification-pipeline
author = Jakub Kaczmarzyk
author_email = jakub.kaczmarzyk@stonybrookmedicine.edu
description = Run patch-based classification on pathology whole slide images.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    # We require torch and torchvision but do not include them here because their
    # installation varies by platform and hardware.
    # See https://pytorch.org/get-started/locally/.
    click>=8.0,<9
    h5py
    # The patching module uses OpenSlide so we restrict ourselves to image formats
    # compatible with OpenSlide.
    large-image[openslide]>=1.8.0
    numpy
    opencv-python-headless>=4.0.0
    pandas
    pillow
    tqdm

[options.extras_require]
dev =
    black
    flake8
    mypy

[options.entry_points]
console_scripts =
    wsi_create_patches = wsi_inference.patchlib.create_patches_fp:cli
    wsi_run = wsi_inference.main:cli
    wsi_convert_csv_to_geojson = wsi_inference.convert_csv_to_geojson:cli

[options.package_data]
wsi_inference =
    patchlib/presets/*.csv

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = wsi_inference/_version.py

[versioneer]
VCS = git
style = pep440
versionfile_source = wsi_inference/_version.py
versionfile_build = wsi_inference/_version.py
tag_prefix =
parentdir_prefix = wsi_inference
