[metadata]
name = wsinfer
url = https://github.com/kaczmarj/patch-classification-pipeline
author = Jakub Kaczmarzyk
author_email = jakub.kaczmarzyk@stonybrookmedicine.edu
description = Run patch-based classification on pathology whole slide images.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    click>=8.0,<9
    h5py
    # OpenSlide and TIFF readers should handle all images we will encounter.
    large-image[openslide,tiff]>=1.8.0
    numpy
    opencv-python-headless>=4.0.0
    pandas
    pillow
    pyyaml
    timm
    # The installation fo torch and torchvision can differ by hardware. Users are
    # advised to install torch and torchvision for their given hardware and then install
    # wsinfer. See https://pytorch.org/get-started/locally/.
    torch>=1.7
    torchvision
    tqdm

[options.extras_require]
dev =
    black
    flake8
    geojson
    imagecodecs  # for tifffile
    mypy
    pytest
    tifffile
    types-Pillow
    types-PyYAML
    types-tqdm
docs =
    pydata-sphinx-theme
    sphinx<6.0.0
    sphinx-autoapi
    sphinx-click

[options.entry_points]
console_scripts =
    wsinfer = wsinfer.cli.cli:cli

[options.package_data]
wsinfer =
    _patchlib/presets/*.csv
    modeldefs/*.yaml

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = wsinfer/_version.py

[mypy]
[mypy-h5py]
ignore_missing_imports = True
[mypy-large_image]
ignore_missing_imports = True
[mypy-cv2]
ignore_missing_imports = True
[mypy-torchvision.*]
ignore_missing_imports = True
[mypy-openslide]
ignore_missing_imports = True
[mypy-pandas]
ignore_missing_imports = True
[mypy-timm.*]
ignore_missing_imports = True
[mypy-scipy.stats]
ignore_missing_imports = True

[versioneer]
VCS = git
style = pep440
versionfile_source = wsinfer/_version.py
versionfile_build = wsinfer/_version.py
tag_prefix = v
parentdir_prefix = wsinfer
